Cloudformation-WordPress.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "WordPress - CloudFormation Stack with EC2, VPC",
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Amazon EC2 Configuration"
          },
          "Parameters": [
            "InstanceType",
            "EC2InstanceName",
            "KeyName",
            "SSHLocation"
          ]
        },
        {
          "Label": {
            "default": "Network Configuration"
          },
          "Parameters": [
            "VPCNetworkCIDR",
            "VPCNetwork0CIDR",
            "VPCNetwork1CIDR",
            "VPCNetwork2CIDR"
          ]
        },
        {
          "Label": {
            "default": "Amazon DB Configuration"
          },
          "Parameters": [
            "DBInstanceName",
            "DBBInstanceType",
            "MySQLUserName",
            "MySQLPassword",
            "DatabaseName",
            "DBAllocatedStorage"
          ]
        }
      ],
      "ParameterLabels": {
        "VPCID": {
          "default": "Which VPC should this be deployed to?"
        },
        "EC2InstanceName": {
          "default": "Value"
        },
        "InstanceType": {
          "default": "Instance Type"
        },
        "KeyName": {
          "default": "Key Name"
        },
        "SSHLocation": {
          "default": "SSH Location"
        },
        "MySQLUserName": {
          "default": "MySQL Admin Username"
        },
        "MySQLPassword": {
          "default": "MySQL Admin Password"
        },
        "DatabaseName": {
          "default": "Insert DB Name"
        },
        "DBAllocatedStorage": {
          "default": "DB Allocated Storage"
        }
      }
    }
  },
  "Mappings": {
    "Images": {
      "us-east-1": {
        "Value": "ami-04d29b6f966df1537"
      },
      "us-east-2": {
        "Value": "ami-09558250a3419e7d0"
      },
      "us-west-1": {
        "Value": "ami-a540a5e1"
      },
      "us-west-2": {
        "Value": "ami-4dbf9e7d"
      }
    }
  },
  "Parameters": {
    "KeyName": {
      "Description": "Name of an existing EC2 key pair to enable SSH access to the instances",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "Must be the name of an existing EC2 KeyPair.",
      "MinLength": "1",
      "Default": "ohio-key"
    },
    "SSHLocation": {
      "Description": "The IP address range that can be used to SSH to the EC2 instances",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x.",
      "Default": "0.0.0.0/0"
    },
    "VPCNetworkCIDR": {
      "Description": "The CIDR block for the entire VPC network",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
      "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28 for e.g 10.0.0.0/16 or 172.16.0.0/16",
      "Default": "10.0.0.0/16"
    },
    "VPCNetwork0CIDR": {
      "Description": "The CIDR block for the Public network",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
      "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28 for e.g 10.0.0.0/24 or 172.16.0.0/24",
      "Default": "10.0.1.0/24"
    },
    "VPCNetwork1CIDR": {
      "Description": "CIDR block for the public subnet 1 located in Availability Zone 1",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
      "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28 for e.g 10.0.1.0/24 or 172.16.1.0/24",
      "Default": "10.0.2.0/24"
    },
    "VPCNetwork2CIDR": {
      "Description": "CIDR block for the public subnet 2 located in Availability Zone 2",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
      "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28 for e.g 10.0.2.0/24 or 172.16.2.0/24",
      "Default": "10.0.3.0/24"
    },
    "EC2InstanceName": {
      "Description": "EC2 Instance Name",
      "Type": "String",
      "AllowedPattern": "[a-zA-Z]*",
      "ConstraintDescription": "Your EC2 instance Name in value for e.g myec2instance",
      "Default": "WebInstance"
    },
    "InstanceType": {
      "Description": "EC2 instance type",
      "Type": "String",
      "Default": "t2.micro",
      "AllowedValues": [
        "t2.micro",
        "t3a.nano",
        "t3.nano",
        "t2.small",
        "t2.medium"
      ],
      "ConstraintDescription": "Must be a valid EC2 instance type."
    },
    "MySQLUserName": {
      "Description": "UserName for the RDS.",
      "Default": "wordpress",
      "Type": "String",
      "NoEcho": "false"
    },
    "MySQLPassword": {
      "Description": "Password for the DB User - Between 8-32 characters; Include at least one digit, upper case letter,lower case letter and no special characters.",
      "Type": "String",
      "MinLength": "8",
      "MaxLength": "32",      
      "ConstraintDescription": "Your Database Admin Password must be between 8 and 32 characters, include at least one digit, upper case letter and only contain acceptable characters.",
      "Default": "Breast35b.",
      "NoEcho": "true"
    },
    "DBInstanceName": {
      "Description": "DB Instance Name",
      "Type": "String",
      "Default": "wordpress",
      "AllowedPattern": "[a-zA-Z]*",
      "ConstraintDescription": "Your DB instance Name in value for e.g mydbinstance"
    },
    "DatabaseName": {
      "Description": "The name of the database inside the instance.",
      "Default": "wordpress",
      "Type": "String",
      "AllowedPattern": "[a-zA-Z]*"
    },
    "DBInstanceType": {
      "Description": "DB Instance Type",
      "Default": "t2.micro",
      "Type": "String",
      "AllowedValues": [
        "t2.micro",
        "t3a.nano",
        "t3.nano",
        "t2.small",
        "t2.medium"
      ],
      "ConstraintDescription": "Must be a valid RDS Instance Type."
    },
    "DBAllocatedStorage": {
      "Default": "50",
      "Description": "The size of the database (Gb)",
      "Type": "Number",
      "MinValue": "5",
      "MaxValue": "3072",
      "ConstraintDescription": "Must be between 5 and 3072Gb."
    }
  },
  "Resources": {
    "DBSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCNetwork1CIDR"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "MapPublicIpOnLaunch": "false",
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCNetwork0CIDR"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "MapPublicIpOnLaunch": "true",
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "AssociationRtToPubSub": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "AssociationRtToPrivateSub": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "SubnetId": {
          "Ref": "DBSubnet"
        }
      }
    },
    "InternetGateway": {
      "DependsOn": "VPC",
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "AttachGatewayToVPC": {
      "DependsOn": [
        "VPC",
        "InternetGateway"
      ],
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        },
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "DefaultPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGatewayToVPC",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "DefaultPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NatGateway"
        }
      }
    },
    "NatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NatGatewayEIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        },
        "Tags": [
          {
            "Key": "name",
            "Value": "NatGateway"
          }
        ]
      }
    },
    "NatGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "AttachGatewayToVPC",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCNetworkCIDR"
        },
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "SecurityGroupInstance": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SG for EC2 Instance",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "3306",
            "ToPort": "3306",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          }
        ],
        "SecurityGroupEgress" : [{
         "IpProtocol" : "tcp",
         "FromPort" : 80,
         "ToPort" : 80,
         "CidrIp" : "0.0.0.0/0"
      },{
         "IpProtocol" : "udp",
         "FromPort" : 80,
         "ToPort" : 80,
         "CidrIp" : "0.0.0.0/0"
      },{
         "IpProtocol" : "tcp",
         "FromPort" : 443,
         "ToPort" : 443,
         "CidrIp" : "0.0.0.0/0"
      },{
         "IpProtocol" : "udp",
         "FromPort" : 443,
         "ToPort" : 443,
         "CidrIp" : "0.0.0.0/0"
      }
    ],
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "WebInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "KeyName": {
          "Ref": "KeyName"
        },
        "IamInstanceProfile": "Role_s3_fullaccess",
        "ImageId": { "Fn::FindInMap" : [ "Images", {"Ref":"AWS::Region"}, "Value"] },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "SecurityGroupIds": [
          {
            "Ref": "SecurityGroupInstance"
          }
        ],
        "SubnetId": {
          "Ref": "PublicSubnet"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Webinstance"
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/sh -x \n",
                "curl -O https://bootstrap.pypa.io/get-pip.py\n",
                "python get-pip.py\n",
                "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
                "/opt/aws/bin/cfn-init -v",
                " --region ",
                {
                  "Ref": "AWS::Region"
                },
                " --stack ",
                {
                  "Ref": "AWS::StackName"
                },
                " --resource WebInstance\n",
                "yum -y install httpd php-mysql\n",
                "yum -y install php\n",
                "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip \n",
                "unzip awscliv2.zip \n",
                "sudo ./aws/install \n",
                "sudo yum install -y amazon-linux-extras \n",
                "amazon-linux-extras install -y php7.3\n",
                "yum -y update\n",
                "cd /var/www/html\n",
                "curl -sL https://wordpress.org/latest.tar.gz | tar xfz -\n",
                "chown -R root:root wordpress\n",
                "sed -e 's/database_name_here/wordpress/'",
                " -e 's/username_here/",{"Ref": "MySQLUserName"},"/'",
                " -e 's/password_here/",{"Ref": "MySQLPassword"},"/'",
                " -e 's/localhost/",{"Fn::GetAtt": ["DbInstance","PrivateIp"]},
                "/'",
                " < wordpress/wp-config-sample.php > wordpress/wp-config.php\n",
                "echo 'RedirectMatch ^/$ /wordpress' > /etc/httpd/conf.d/wordpress.conf\n",
                "setsebool -P httpd_can_network_connect on\n",
                "systemctl enable httpd && systemctl start httpd\n",
                "mkdir -p /home/ec2-user/s3\ncd /home/ec2-user/s3\naws s3 sync s3://bpwordpresscfbucket .\n",
                "cd ..\n",
                "cp s3/",{"Ref": "KeyName"},".pem .\n",
                "sudo chown ec2-user ",{"Ref": "KeyName"},".pem\n",
                "sudo chmod 400 ",{"Ref": "KeyName"},".pem\n"
              ]
            ]
          }
        }
      }
    },
    "DbInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "KeyName": {
          "Ref": "KeyName"
        },
        "IamInstanceProfile": "Role_s3_fullaccess",
        "ImageId": { "Fn::FindInMap" : [ "Images", {"Ref":"AWS::Region"}, "Value"] },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "SecurityGroupIds": [
          {
            "Ref": "SecurityGroupInstance"
          }
        ],
        "SubnetId": {
          "Ref": "DBSubnet"
        },
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -x\n",
                "echo JHON ",
                "/opt/aws/bin/cfn-init ",
                "/opt/aws/bin/cfn-signal -e $? ",
                "  --stack ", { "Ref": "AWS::StackName" },
                "  --resource Webinstance " ,
                "  --region ", { "Ref" : "AWS::Region" }, "n",
                "curl -I https://aws.amazon.com\n",
                "sudo su\n",
                "yum update -y\n",
                "yum localinstall -y https://dev.mysql.com/get/mysql80-community-release-el7-1.noarch.rpm\n",
                "yum install -y mysql-community-server\n",
                "systemctl enable mysqld\n",
                "systemctl start mysqld\n",
                "export pass=$(grep -oP '(?<=root@localhost\\: )\\S+' /var/log/mysqld.log)\n",
                "echo $pass\n",
                "mysql -u root \"-p$(grep -oP '(?<=root@localhost\\: )\\S+' /var/log/mysqld.log)\" -e \"ALTER USER 'root'@'localhost' IDENTIFIED BY '",{"Ref": "MySQLPassword"},"'\" --connect-expired-password\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"CREATE USER '",{"Ref": "MySQLUserName"},"'@'%' IDENTIFIED BY '",{"Ref": "MySQLPassword"},"'\"\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '",{"Ref": "MySQLPassword"},"';\"\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"ALTER USER '",{"Ref": "MySQLUserName"},"'@'%' IDENTIFIED WITH mysql_native_password BY '",{"Ref": "MySQLPassword"},"';\"\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"GRANT ALL PRIVILEGES ON *.* TO '",{"Ref": "MySQLUserName"},"'@'%'\"\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"FLUSH PRIVILEGES\"\n",
                "mysql -u root \"-p",{"Ref": "MySQLPassword"},"\" -e \"CREATE DATABASE ",{"Ref": "DBInstanceName"},";\"\n"
              ]
            ]
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBinstance"
          }
        ]
      }
    },
    "SGBaseIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "SecurityGroupInstance",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroupInstance"
        },
        "IpProtocol": "tcp",
        "ToPort": "443",
        "FromPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "OutboundRuleTCP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "SecurityGroupInstance",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroupInstance"
        },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 65535,
        "CidrIp": "0.0.0.0/0",
        "Description": "Internet por favor"
      }
    },
    "OutboundRuleUDP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "SecurityGroupInstance",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroupInstance"
        },
        "IpProtocol": "udp",
        "FromPort": 0,
        "ToPort": 65535,
        "CidrIp": "0.0.0.0/0",
        "Description": "Internet por favor"
      }
    }
  },
  "Outputs": {
    "MantisBTURL": {
      "Description": "WordPress URL",
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "WebInstance",
                "PublicIp"
              ]
            }
          ]
        ]
      }
    }
  }
}
